...
                        .padding(vertical = 12.dp)
                ) {
                    Row(
                        modifier = Modifier.fillMaxWidth(),
                        horizontalArrangement = Arrangement.SpaceEvenly
                    ) {
                        listOf("Manual", "Picture").forEach { method ->
                            val isSelected = inputMethod == method
                            val underlineWidth by animateDpAsState(
                                targetValue = if (isSelected) 70.dp else 0.dp,
                                label = "Underline Animation"
                            )

...
                            },
                            colors = ButtonDefaults.buttonColors(
                                containerColor = NomsyColors.Background
                            ),
                            border = BorderStroke(1.dp, NomsyColors.Title)
                        ) {
                            Text("Submit")
                        }

                        TextButton(
                            onClick = onDismiss,
                            border = BorderStroke(1.dp, NomsyColors.Title)
                        ) {
...
