...
            ),
            singleLine = true,
            modifier = Modifier
                .weight(1f)
                .height(56.dp)
                .padding(end = if (unit != null) 8.dp else 0.dp)
                .testTag("InputField"),
            colors = TextFieldDefaults.outlinedTextFieldColors(
                textColor = NomsyColors.Texts,
                cursorColor = NomsyColors.Title,
                focusedBorderColor = NomsyColors.Title,
                unfocusedBorderColor = NomsyColors.Subtitle,
                backgroundColor = NomsyColors.PictureBackground
...
