...

        if (recognizedFood.isNotBlank()) {
            Text(
                text = "Detected: $recognizedFood",
                color = NomsyColors.Title,
                modifier = Modifier.padding(8.dp)
                    .testTag("DetectedFood")
            )
        }

        foodDetail?.let {
            Column(horizontalAlignment = Alignment.CenterHorizontally, modifier = Modifier.testTag("FoodDetails")) {
                Text("Food: ${it.food_name}", color = NomsyColors.Texts)
...
